# echelon3

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
concepts/how-it-works/: index.html
concepts/run-anatomy/: index.html
docs/: index.md
docs/concepts/: how-it-works.md  run-anatomy.md
docs/getting-started/: first-run.md  installation.md
docs/guide/: ddp.md  export.md  extending.md
docs/reference/: cli.md  components.md  config-schema.md
examples/: gen_smoke_data.py
examples/configs/: smoke.yaml
examples/detector/: README.md  backbone.py  detector_smoke.yaml  gen_det_data.py
examples/segmentation/: README.md  backbone.py  gen_seg_data.py  segmentation_smoke.yaml
examples/tabular/: README.md  admet_catboost.yaml  admet_gnn.yaml  credit_base.yaml  credit_catboost.yaml  credit_hgb.yaml  credit_lgbm.yaml  credit_logreg_ft.yaml  credit_rf.yaml  credit_xgb.yaml  gen_admet_data.py  gen_tabular_data.py
getting-started/first-run/: index.html
getting-started/installation/: index.html
guide/ddp/: index.html
guide/export/: index.html
guide/extending/: index.html
reference/cli/: index.html
reference/components/: index.html
reference/config-schema/: index.html
search/: search_index.json
src/echelon3/: __init__.py  creator.py  ddp.py  runtime.py  warncollect.py
src/echelon3/checkpoint/: manager.py
src/echelon3/cli/: __init__.py  config.py  evaluate.py  export.py  finetune.py  main.py  run.py  train.py
src/echelon3/data/: __init__.py  basic.py  detection.py  filters.py  image2image.py  imageclassifier.py  molecular.py  multihead.py  tabular.py
src/echelon3/dataloaders/: balance.py  classwise.py  multipart.py  varloader.py
src/echelon3/evaluators/: basic.py  classifier.py
tests/: _fixtures.py  test_cli_config.py  test_close_quietly.py  test_collate_component.py  test_config_optional.py  test_device_select.py  test_dist_reduce.py  test_estimator_trainer.py  test_metric_to.py  test_mol_gnn.py  test_molecular_multitarget.py  test_multidataset_metric.py  test_multipart_ddp.py  test_persistent_workers.py  test_small_dataset.py  test_worker_init.py
(+57 files in other folders)
