[project]
name = "echelon3"
version = "0.7.10"
description = "Config-driven PyTorch training framework: assemble nets, data, losses and trainers from YAML"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Kirill Groshenkov", email = "kir.groshenkov@gmail.com" }]
keywords = ["pytorch", "training", "deep-learning", "computer-vision", "hydra", "config-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "albumentations>=1.4",
    "colorama>=0.4",
    "hydra-core>=1.3",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "tensorboard>=2.14",
    "timm>=1.0",
    "torch>=2.1",
    "torchmetrics>=1.2",
    "torchvision>=0.16",
    "tqdm>=4.65",
]

[project.optional-dependencies]
export = ["onnx>=1.15", "onnxruntime>=1.16"]
sam = ["mosaicml>=0.3.1"]
smp = ["segmentation-models-pytorch>=0.3.3"]
detection = ["faster-coco-eval>=1.5"]
docs = ["mkdocs>=1.6.1,<2", "mkdocs-material>=9.7,<10"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/veryviolet/echelon3"
Repository = "https://github.com/veryviolet/echelon3"
Issues = "https://github.com/veryviolet/echelon3/issues"
Documentation = "https://veryviolet.github.io/echelon3/"

[project.scripts]
echelon3-train = "echelon3.cli.train:main"
echelon3-evaluate = "echelon3.cli.evaluate:main"
echelon3-run = "echelon3.cli.run:main"
echelon3-export = "echelon3.cli.export:main"
echelon3-finetune = "echelon3.cli.finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echelon3"]
